Actions
Bug #9757
closedgetent ipnodes has wrong exit status
Start date:
2018-08-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
According to the getent man page, getent will return:
3 There is no support for enumeration on this database.
For ethers and netmasks, that's the case. For ipnodes, it returns 0.
A quick look at the code indicates that the ipnodes routine handles the error and prints the message itself, unlike the other cases which defer it to the main getent code.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 81a867407659fae007ac4ca95e5685c1d38fa5f1
commit 81a867407659fae007ac4ca95e5685c1d38fa5f1 Author: Peter Tribble <peter.tribble@gmail.com> Date: 2018-08-20T17:36:49.000Z 9757 getent ipnodes has wrong exit status Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions